[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/RadialMenu/Demo/pexels-asad-photo-maldives-3320529.jpg" type="Texture" id=1]
[ext_resource path="res://addons/RadialMenu/Demo/RadialDemo.gd" type="Script" id=3]
[ext_resource path="res://addons/RadialMenu/RadialMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/RadialMenu/dark_default_theme.tres" type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="RadialMenuDemo" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftThrid" type="ColorRect" parent="Background"]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MiddleThird" type="ColorRect" parent="Background"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.164706, 0.164706, 0.164706, 1 )

[node name="RightThird" type="ColorRect" parent="Background"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="pexels-asad-photo-maldives-3320529" type="Sprite" parent="Background/RightThird"]
position = Vector2( 720.334, 626.756 )
texture = ExtResource( 1 )

[node name="Instructions" type="Label" parent="."]
margin_top = 284.0
margin_right = 1024.0
margin_bottom = 315.0
size_flags_horizontal = 7
size_flags_vertical = 6
text = "Click anywhere with the right mouse button 
to open the radial menu."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuResult" type="Label" parent="."]
margin_left = 443.0
margin_top = 550.0
margin_right = 580.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Nothing selected yet."
align = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadialMenu" parent="." instance=ExtResource( 4 )]
visible = true
margin_left = 382.0
margin_top = 0.0
margin_right = 642.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 260 )
rect_pivot_offset = Vector2( 130, 130 )
size_flags_vertical = 0
radius = 130
width = 50
circle_coverage = 1.0
center_angle = -1.02
icon_scale = 0.7
default_theme = ExtResource( 5 )
[connection signal="about_to_show" from="RadialMenu" to="RadialMenu" method="_about_to_show"]
[connection signal="item_selected" from="RadialMenu" to="." method="_on_ArcPopupMenu_item_selected"]
[connection signal="visibility_changed" from="RadialMenu" to="RadialMenu" method="_on_visibility_changed"]
